feat: suport for JDK 17 (#20)
* adding "--add-opens" to test and docs
* creating specific jvmopts for 17
* redefining message to handle different traces for 11 and 17 when using Socket
* mixing both "Problem"s in one to catch java.net
* better java version retrival
* logging warning and stopping when inaccessibleObjectException
* avoid using java.lang.reflect.InaccessibleObjectException for JDK 8 compatibility reasons